adding recipes to menu

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
                   Weekly Menus
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Create a Menu</a></li>
+                  <li><a class="dropdown-item" href="http://127.0.0.1:5000/recipes/add_to_menu">Create a Menu</a></li>
                   <li><a class="dropdown-item" href="#">Find a Menu</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Get a Shopping List</a></li>
